--- a/MvcPet/MvcPet/Views/Home/Index.cshtml
+++ b/MvcPet/MvcPet/Views/Home/Index.cshtml
@@ -5,7 +5,8 @@
 <div class="jumbotron">
     <h1>!Pet Store!</h1>
     <p>
-         Buy me...please.
+        <img align="middle" height="400" width="500" src="http://octodex.github.com/images/daftpunktocat-thomas.gif" alt="Gitcat" > <br />
+         <strong>Buy me...please.</strong>
     </p>
 </div>
 
