--- a/MvcPet/MvcPet/Views/Inventory/Details.cshtml
+++ b/MvcPet/MvcPet/Views/Inventory/Details.cshtml
@@ -35,6 +35,15 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Price)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Price)
+        </dd>
+    
+
     </dl>
 </div>
 <p>
