--- a/MvcPet/MvcPet/Views/Inventory/Index.cshtml
+++ b/MvcPet/MvcPet/Views/Inventory/Index.cshtml
@@ -17,6 +17,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Price)
+        </th>
         <th></th>
     </tr>
 
@@ -31,6 +34,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Description)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Price)
         </td>
         <td>
             @*@Html.ActionLink("Edit", "Edit", new { id=item.ID }) |*@
