--- a/MvcPet/MvcPet/Views/Shared/_Layout.cshtml
+++ b/MvcPet/MvcPet/Views/Shared/_Layout.cshtml
@@ -17,13 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Pet Store App", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Pet Store", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <!-- <li>@Html.ActionLink("About", "About", "Home")</li>-->
+                    <!--<li>@Html.ActionLink("Contact", "Contact", "Home")</li>-->
                     <li>@Html.ActionLink("Manage","Index","Manage")</li>
                     <li>@Html.ActionLink("Inventory","Index","Inventory")</li>
                 </ul>
